--- a/package.json
+++ b/package.json
@@ -17,10 +17,15 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "install": "^0.13.0",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.2",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.4"
+    "nodemailer": "^6.9.4",
+    "npm": "^9.8.1",
+    "otp-generator": "^4.0.1",
+    "socket.io": "^4.7.2",
+    "twilio": "^4.16.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
@@ -31,6 +36,7 @@
     "@types/multer": "^1.4.7",
     "@types/node": "^20.4.8",
     "@types/nodemailer": "^6.4.9",
+    "@types/otp-generator": "^4.0.0",
     "cors": "^2.8.5",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
