--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "build": "npx tsc",
-    "start": "node dist/index.js",
+    "start": "npm install && npm run build && node dist/index.js",
     "dev": "npx nodemon"
   },
   "author": "",
