--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "build": "npx tsc",
-    "start": "npm install && npm run build && node dist/index.js",
+    "build": "npm install && npx tsc",
+    "start": "node dist/index.js",
     "dev": "npx nodemon"
   },
   "author": "",
