--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.2",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.2",
     "nodemailer": "^6.9.4",
     "npm": "^9.8.1",
     "otp-generator": "^4.0.1",
@@ -36,6 +37,7 @@
     "@types/jsonwebtoken": "^9.0.2",
     "@types/multer": "^1.4.7",
     "@types/node": "^20.4.8",
+    "@types/node-cron": "^3.0.9",
     "@types/nodemailer": "^6.4.9",
     "@types/otp-generator": "^4.0.0",
     "cors": "^2.8.5",
