--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,9 @@ jobs:
       - name: Deploy to EC2
         run: |
           npm run build
-          scp -i <(echo "$EC2_PRIVATE_KEY") -r ./dist ec2-user@ec2-3-214-28-97.compute-1.amazonaws.com:/home/ec2-user/hackerconnect-backend
+          echo "$EC2_PRIVATE_KEY" > key.pem
+          chmod 600 key.pem
+          scp -i key.pem -r ./dist ec2-user@ec2-3-214-28-97.compute-1.amazonaws.com:/home/ec2-user/hackerconnect-backend
         env:
           EC2_USER: ec2-user
           EC2_PUBLIC_IP: ec2-3-214-28-97.compute-1.amazonaws.com
