--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,10 @@ jobs:
           npm run build
           echo "$EC2_PRIVATE_KEY" > key.pem
           chmod 600 key.pem
+
+          eval "$(ssh-agent -s)"
+          ssh-add key.pem
+
           scp -i key.pem -r ./dist ec2-user@ec2-3-214-28-97.compute-1.amazonaws.com:/home/ec2-user/hackerconnect-backend
         env:
           EC2_USER: ec2-user
