--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,36 +1,29 @@
-name: Deploy to EC2
+name: hc-backend-workflow
 
 on:
   push:
-    branches:
-      - main
+    branches: [main]
 
 jobs:
-  deploy:
-    runs-on: ubuntu-latest
-
+  build:
+    runs-on: [ubuntu-latest]
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v2
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
-
-      - name: Install Dependencies
-        run: npm install
-
-      - name: Deploy to EC2
-        run: |
-          npm run build
-          echo "$EC2_PRIVATE_KEY" > key.pem
-          chmod 600 key.pem
-
-          eval "$(ssh-agent -s)"
-          ssh-add key.pem
-
-          scp -i key.pem -r ./dist ec2-user@ec2-3-214-28-97.compute-1.amazonaws.com:/home/ec2-user/hackerconnect-backend
-        env:
-          EC2_USER: ec2-user
-          EC2_PUBLIC_IP: ec2-3-214-28-97.compute-1.amazonaws.com
+      - name: Checkout source
+        uses: actions/checkout@v3
+      - name: Login to docker hub
+        run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }} 
+      - name: Build docker image
+        run: docker build -t aravsanj/hackerconnect-backend .
+      - name: Publish image to docker hub
+        run: docker push aravsanj/hackerconnect-backend:latest
+        
+  deploy:
+    needs: build
+    runs-on: [aws-ec2]
+    steps:
+      - name: Pull image from docker hub
+        run: docker pull aravsanj/hackerconnect-backend:latest
+      - name: Delete old container
+        run: docker rm -f hackerconnect-backend-container
+      - name: Run docker container
+        run: docker run -d -p 3001:3001 --name hackerconnect-backend-container aravsanj/hackerconnect-backend
